shinobi-frontend/src/Components/WelcomePage/WelcomePage.css
.welcome-page {
  display: flex;
  flex-direction: column;
  align-items: center;
  overflow: hidden;
}

.welcome-video {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  z-index: -1;
}

@media (min-aspect-ratio: 16/9) {
  .welcome-video {
    width: 100%;
    height: auto;
  }
}

@media (max-aspect-ratio: 16/9) {
  .welcome-video {
    width: auto;
    height: 100%;
  }
}

.sound-icon {
  color: hsl(var(--clr-red));
  font-size: 3rem;
  position: absolute;
  top: 0;
  right: 0;
}
.sound-icon:hover {
  cursor: pointer;
  color: hsl(var(--clr-gold));
}

.presentation-text {
  display: flex;
  gap: 6rem;
  font-size: var(--fs-800);
  padding-top: 6rem;
  -webkit-text-stroke: 0.1rem hsl(var(--clr-red));
  -webkit-text-fill-color: transparent;
  overflow-x: hidden;
  width: max-content;
  animation: infinite-loop 18s infinite linear;
}

@keyframes infinite-loop {
  0% {
    margin-right: -300%;
  }
  100% {
    margin-right: 300%;
  }
}

.enter-button {
  width: 20rem;
  position: absolute;
  bottom: 3rem;
}

@media screen and (max-width: 480px) {
  .presentation-text {
    font-size: var(--fs-500);
    animation: infinite-loops 18s infinite linear;
  }
  @keyframes infinite-loops {
    0% {
      margin-right: -1000%;
    }
    100% {
      margin-right: 1000%;
    }
  }
}

@media screen and (max-width: 999px) {
  .presentation-text {
    font-size: var(--fs-600);
    animation: infinite-loop 18s infinite linear;
  }
  @keyframes infinite-loop {
    0% {
      margin-right: -600%;
    }
    100% {
      margin-right: 600%;
    }
  }
}

@media screen and (max-width: 1450px) {
  .presentation-text {
    font-size: var(--fs-700);
    animation: infinite-loop 18s infinite linear;
  }
  @keyframes infinite-loop {
    0% {
      margin-right: -450%;
    }
    100% {
      margin-right: 450%;
    }
  }
}

